--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <title>Week 2</title>
+  </head>
 
+  <body class="body">
+    <div class="weather_container">
+      <h2 class="city_name">San Francisco</h2>
+      <div class="temperature">
+        12 <span class="degrees">°C</span>/<span class="degrees">°F</span>
+      </div>
+      <time class="current_time">Thursday 21:21</time>
+      <div class="forecast_container">
+        <div class="forecast_day">
+          <div class="day_name">Mon</div>
+          <div class="temp_range">
+            8<span class="degrees">°</span>/0<span class="degrees">°</span>
+          </div>
+        </div>
+        <div class="forecast_day">
+          <div class="day_name">Tue</div>
+          <div class="temp_range">10%<span class="degrees">°</span></div>
+        </div>
+        <div class="forecast_day">
+          <div class="day_name">Wed</div>
+          <div class="temp_range">12%<span class="degrees">°</span></div>
+        </div>
+        <div class="forecast_day">
+          <div class="day_name">Thu</div>
+          <div class="temp_range">6%<span class="degrees">°</span></div>
+        </div>
+        <div class="forecast_day">
+          <div class="day_name">Fri</div>
+          <div class="temp_range">8%<span class="degrees">°</span></div>
+        </div>
+      </div>
+      <div class="details_container">
+        <div class="detail_item">
+          <div class="detail_name">Precipitation:</div>
+          <div class="detail_value">1%</div>
+        </div>
+        <div class="detail_item">
+          <div class="detail_name">Humidity:</div>
+          <div class="detail_value">52%</div>
+        </div>
+        <div class="detail_item">
+          <div class="detail_name">Wind:</div>
+          <div class="detail_value">5km/h</div>
+        </div>
+      </div>
+    </div>
+    <script src="js/main.js"></script>
+  </body>
+</html>
