--- a/index.html
+++ b/index.html
@@ -1,124 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Weather App</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,700;1,800&display=swap"
-        rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link href="/css/style.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body class="body">
+  <body class="body">
     <div class="container">
-        <div class="card">
-            <div class="card-body">
+      <div class="card">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-lg-9 main-info">
+              <div class="cityName">
+                <h1>City Name</h1>
+              </div>
+              <div class="search-city form-group">
+                <input
+                  id="input_text"
+                  name="input_text"
+                  class="form-control city-input d-sm-inline-block m-2"
+                  type="text"
+                  placeholder="type in the city name"
+                />
+                <button class="searchButton btn d-sm-inline-block m-2">
+                  search city
+                </button>
+              </div>
+
+              <div class="main">
                 <div class="row">
-                    <div class="col-lg-9 main-info">
-                        <div class="cityName">
-                            <h1>City Name</h1>
-                        </div>
-                        <div class="search-city form-group">
-                            <input id="input_text" name="input_text" class="form-control city-input d-sm-inline-block m-2" type="text"
-                                placeholder="type in the city name" />
-                            <button class="searchButton btn d-sm-inline-block m-2">
-                                search city
-                            </button>
-                        </div>
-
-                        <div class="main">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="weather-icon">
-                                        <i class="far fa-sun fa-5x"></i>
-                                    </div>
-                                </div>
-                                <div class="col-lg-8 day-info additional-details">
-                                    <p class="day">Today</p>
-                                    <div class="temp">
-                                        <p class="cel"><span>20</span>°C |</p>
-                                        <p class="feh"><span>68</span>°F</p>
-                                    </div>
-                                    <div class="desc">
-                                        <p>Sunny</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="other-info">
-                            <div class="row">
-                                <div class="col-6 rainChance">
-                                    <p class="rainChance-des">chance of rain</p>
-                                    <p class="rainChance-num">20%</p>
-                                </div>
-                                <div class="col-6 uv-info">
-                                    <p>UV Strength</p>
-                                    <p class="uv-num">10</p>
-                                    <p class="uv-des">Sunscreen Required</p>
-                                </div>
-                            </div>
-                        </div>
+                  <div class="col-lg-4">
+                    <div class="weather-icon" id="currentWeatherIcon"></div>
+                  </div>
+                  <div class="col-lg-8 day-info" class="additional-details">
+                    <p class="day">Today</p>
+                    <div class="temp">
+                      <p class="cel"><span id="currentTemp">20</span>°C |</p>
+                      <p class="feh"><span id="currentTempF">68</span>°F</p>
                     </div>
-
-                    <div class="col-lg-3 side-info">
-                        <div class="forecast">
-                            <i class="fa fa-cloud fa-2x"></i>
-                            <div class="forecast-des">
-                                <span class="dayOne dayofWeek">FRI</span>
-                                <span class="dayOne-date date">21 JAN</span>
-                                <p class="f-temp dayOne-temp">22 <span>°C</span></p>
-                            </div>
-                        </div>
-                        <div class="forecast">
-                            <i class="fas fa-sun fa-2x"></i>
-                            <div class="forecast-des">
-                                <span class="dayTwo dayofWeek">SAT</span>
-                                <span class="dayTwo-date date">22 JAN</span>
-                                <p class="f-temp dayTwo-temp">15 <span>°C</span></p>
-                            </div>
-                        </div>
-                        <div class="forecast">
-                            <i class="fas fa-sun fa-2x"></i>
-                            <div class="forecast-des">
-                                <span class="dayThree dayofWeek">SUN</span>
-                                <span class="dayThree-date date">23 JAN</span>
-                                <p class="f-temp dayThree-temp">22 <span>°C</span></p>
-                            </div>
-                        </div>
-                        <div class="forecast">
-                            <i class="fa fa-cloud fa-2x"></i>
-                            <div class="forecast-des">
-                                <span class="dayFour dayofWeek">MON</span>
-                                <span class="dayFour-date date">24 JAN</span>
-                                <p class="f-temp dayFour-temp">18 <span>°C</span></p>
-                            </div>
-                        </div>
-                        <div class="forecast">
-                            <i class="fas fa-cloud-rain fa-2x"></i>
-                            <div class="forecast-des">
-                                <span class="dayFive dayofWeek">TUE</span>
-                                <span class="dayFive-date date">25 JAN</span>
-                                <p class="f-temp dayFive-temp">25 <span>°C</span></p>
-                            </div>
-                        </div>
+                    <div class="desc">
+                      <p id="currentCondition">Sunny</p>
                     </div>
+                  </div>
                 </div>
+              </div>
             </div>
+
+            <div class="col-lg-3 side-info">
+              <div class="forecast-container" id="day1">
+                <i class="fa fa-cloud fa-2x"></i>
+                <div class="forecast-des">
+                  <span class="dayOne dayofWeek">FRI</span>
+                  <span class="dayOne-date date">21 JAN</span>
+                  <p class="f-temp dayOne-temp">22 <span>°C</span></p>
+                </div>
+              </div>
+              <div class="forecast-container" id="day2">
+                <i class="fas fa-sun fa-2x"></i>
+                <div class="forecast-des">
+                  <span class="dayTwo dayofWeek">SAT</span>
+                  <span class="dayTwo-date date">22 JAN</span>
+                  <p class="f-temp dayTwo-temp">15 <span>°C</span></p>
+                </div>
+              </div>
+              <div class="forecast-container" id="day3">
+                <i class="fas fa-sun fa-2x"></i>
+                <div class="forecast-des">
+                  <span class="dayThree dayofWeek">SUN</span>
+                  <span class="dayThree-date date">23 JAN</span>
+                  <p class="f-temp dayThree-temp">22 <span>°C</span></p>
+                </div>
+              </div>
+              <div class="forecast-container" id="day4">
+                <i class="fa fa-cloud fa-2x"></i>
+                <div class="forecast-des">
+                  <span class="dayFour dayofWeek">MON</span>
+                  <span class="dayFour-date date">24 JAN</span>
+                  <p class="f-temp dayFour-temp">18 <span>°C</span></p>
+                </div>
+              </div>
+              <div class="forecast-container" id="day5">
+                <i class="fas fa-cloud-rain fa-2x"></i>
+                <div class="forecast-des">
+                  <span class="dayFive dayofWeek">TUE</span>
+                  <span class="dayFive-date date">25 JAN</span>
+                  <p class="f-temp dayFive-temp">25 <span>°C</span></p>
+                  <div class="forecast-container" id="day1"></div>
+                  <div class="forecast-container" id="day2"></div>
+                  <div class="forecast-container" id="day3"></div>
+                  <div class="forecast-container" id="day4"></div>
+                  <div class="forecast-container" id="day5"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <script src="/js/main.js"></script>
-</body>
-
+  </body>
 </html>
