--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet" />
     <link href="/css/style.css" rel="stylesheet" />
+    <link rel="icon" href="data:,">
 </head>
 
 <body class="body">
